--- a/.github/workflows/staticcheck.yml
+++ b/.github/workflows/staticcheck.yml
@@ -22,7 +22,7 @@ jobs:
       - uses: WillAbides/setup-go-faster@v1.7.0
         with:
           go-version: ${{ matrix.go }}
-      - run: "go test ./..."
+      - run: make test/codecov
       - run: "go vet ./..."
       - uses: dominikh/staticcheck-action@v1.1.0
         with:
