CI workflow fix

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -4,10 +4,10 @@ on:
     tags:
       - v*
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
 permissions:
   contents: read
   # Optional: allow read access to pull request. Use with `only-new-issues` option.
